--- a/src/resources/view/layouts/main.hbs
+++ b/src/resources/view/layouts/main.hbs
@@ -15,10 +15,12 @@
         <header>
             {{>header}}
         </header>
-        {{{body}}}
-        <footer>
+        <div class="container">
+            {{{body}}}
+        </div>
+        {{!-- <footer>
             <h2>FOOTER</h2>
-        </footer>
+        </footer> --}}
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
